# UltimateShapes

./: CMakeLists.txt  README.md
include/UltimateShapes/: shapes.hpp
shaders/: gradientShader.frag
src/: main.cpp  shapes.cpp
